@@ -1,3 +1,6 @@
+2000-05-13  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+	* exult.cc: F4 toggles fullscreen (Windows & Linux)
+
 2000-05-11  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* Midi.cc: fix to windows playing MIDI only once
 	* fnames.h: included MIDITMPFILE
